--- a/client/app/home/_home.scss
+++ b/client/app/home/_home.scss
@@ -1,3 +1,9 @@
-h1{
-	font-size: 200px;
+.radiobase-title h1{
+	margin-top: 60px;
+}
+
+
+.radiobase-title{
+	margin-top: 60px;
+	font-size: 45px;
 }
