youtube video page is functional where the songs on the left scroll up and down and the video on the right responds to button presses of song. I need to add the bio and style the right so it fits nicely. Also still add a bootstrap theme and get spotify hooked up.

--- a/client/app/youtube/youtube.scss
+++ b/client/app/youtube/youtube.scss
@@ -21,9 +21,14 @@
 .song-list{
 	text-align:left;
 }
+.test{
+	height:500px;
+}
 
 #boxy-content {
-	width:80%; padding-left:20%;
+	margin-left:20%;
+	display: block;
+    align: center;
 }
 
 #sidebar-songs {
