brought files from scraper project into radiobase project

--- a/client/app/youtube/youtube.scss
+++ b/client/app/youtube/youtube.scss
@@ -24,9 +24,12 @@
 .test{
 	height:500px;
 }
-
+.biography{
+	margin-left:20%;
+}
 #boxy-content {
 	margin-left:20%;
+	height:70%;
 	display: block;
     align: center;
 }
